--- a/dissertation.bib
+++ b/dissertation.bib
@@ -681,6 +681,23 @@
   file = {/Users/christosdemetriou/Zotero/storage/B9YFV2Y3/Pak - 2022 - What is a combinatorial interpretation.pdf;/Users/christosdemetriou/Zotero/storage/HSY6TP39/2209.html}
 }
 
+@misc{pak_WhatCombinatorialInterpretation_2022a,
+  title = {What Is a Combinatorial Interpretation?},
+  author = {Pak, Igor},
+  year = {2022},
+  month = sep,
+  number = {arXiv:2209.06142},
+  eprint = {2209.06142},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2209.06142},
+  urldate = {2025-07-08},
+  abstract = {In this survey we discuss the notion of combinatorial interpretation in the context of Algebraic Combinatorics and related areas. We approach the subject from the Computational Complexity perspective. We review many examples, state a workable definition, discuss many open problems, and present recent results on the subject.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computational Complexity,Computer Science - Discrete Mathematics,Mathematics - Combinatorics},
+  file = {/Users/christosdemetriou/Zotero/storage/JYW8QQ8Z/Pak - 2022 - What is a combinatorial interpretation.pdf;/Users/christosdemetriou/Zotero/storage/LPYU32NW/2209.html}
+}
+
 @article{papadimitriou_ComplexityParityArgument_1994,
   title = {On the Complexity of the Parity Argument and Other Inefficient Proofs of Existence},
   author = {Papadimitriou, Christos H.},
