--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,1 +1,11 @@
-\lipsum[1]
+In the world of combinatronics, one often looks for the combinatronic interpretation between numbers.
+Recently, through the works of Igor Pak and other researchers, people have decided
+to combine the worlds of counting complexity theory with combinatronics to give formal
+definition to this idea \cite{ikenmeyer_WhatWhatNot_2022, ikenmeyer_PositivitySymmetricGroup_2024, pak_WhatCombinatorialInterpretation_2022}. 
+Our project focuses on analysing the combinatorial properties of $\textsc{PPAD} -1$ using
+the \textsc{PureCircuit} problem as well as developing a visualisation tool for it. In this report, we give a progress report as to the work that 
+we have done as well as talk about notable results such as parsimonious reductions between Sperner problems to
+\textsc{PureCircuit} up to some constant bound.
+
+
+
