--- a/sections/next_steps.tex
+++ b/sections/next_steps.tex
@@ -24,8 +24,9 @@ to the milestones we aim to achieve. Overall we modified our timeline to priorit
 theory crafting and therefore we hope this adjusted timeline will capture accurately the remaining duration
 of the project.
 
-\begin{figure}
-    \includegraphics[width=0.5\textwidth]{assets/gantt_new.png}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.85\textwidth]{assets/Interim Gantt 20250708.pdf}
     \caption{Updated gantt chart}\label{fig:gantt-new}
 \end{figure}
 
