--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -1,43 +1,63 @@
 \subsection{Reflections}
 
-Over the last couple of months I made a lot of mistakes whilst working with the project.
-Was just not focusing enough or spending enough time to do the necessary research needed
-to comprehend the topic. Moreover, I spent time focusing on the wrong aspects of my assignment.
-An example of that is referred to the sections were we showed variants of our pure circuit
-that have a combinatorial interpretation. Another core issue I faced was the lack
-of experience when dealing with more theoretical based project. This led me to
-trying to tackle the problem head on without exploring alternative avenues. For example 
-we can observe that our main reduction from the \textit{EndOfLine} came
-when using topological problems instead. 
+Overall, the current project progressed as anticipated. We managed to keep
+consistent progress in both theory and development aspect. In addition,
+due to the theoretical overlap the project has with other fields, we
+were able to experiment with great variety of problems as well as
+develop research methodologies for tackling these problems.
 
-\subsection{Lessons Learned}
+Of course understanding how to conduct such research came with a lot of trials and error.
+We quickly realised that such projects require a much more extensive literature review than anticipated.
+Moreover, when it comes to theorising and proof development, we faced many failures.
+Often, we spent an excessive amount of time working on a problem without being methodical.
+From that, we understood that when trying to prove statements, it is often more beneficial
+exploring the field as a whole, tackling various problems and gathering ideas from each.
+Moreover, each failed attempt allows us to understand a problem in greater depth, how it behaves
+and how to formulate our attempt to increase our chances.
+This can be observed in our canvas board \ref{fig:theory:obsidian-canvas}, where we
+used ``whiteboard'' approach to keep track of the project from a bird's-eye view. 
+We hope to use this exploratory methodology to uncover even more mysteries that surround
+the complexity of counting problems.
 
-Up to the current phase of our project, we were able to gather several important takeaways.
-Exploring the literature and trying to work the problem under different perspectives
-may lead to potential breakthroughs. The main catalyst to our core finding, came
-when looking into problems such as \textsc{EOPL} or more specifically
-the \textsc{OPDC} problem, described by Fernley et al. \cite{fearnley_UniqueEndPotential_2020}.
-\textsc{OPDC} can be described as a simpler version of the traditonal n-dimensional Brouwer problem
-where instead, we have a unqiue fixed point and our function will point towards the unique solution.
-Moreover, deeper look into Kleene-logic or more specifically \textit{Hazard-free} circuits allowed
-us to exploit the $\bot$ value to compute multiple input simultaneously \cite{ikenmeyer_ComplexityHazardfreeCircuits_2019}.
-Using the two aforementioned observations as well as looking at the original reduction again allowed us to achieve
-the desired breakthrough.
 
-In order to accomplish the above research, we have also learned how to research more effectively.
-Exploitation of LLMs such as \texttt{ChatGPT}, \texttt{Perplexity} and more, we are able to
-approach the problem from multiple perspectives. Moreover, thought organisation and cataloguing with
-\texttt{Obsidian}
-also came crucial when handling a large volume of ideas and information over a long period of time,
-as explained in the previous sections. Last but not least, utilisation of books,
-related research and textbooks also came important when it came to theory crafting and idea extraction.
-
-Last but not least, the general approach to the project changed over the course of time.
-Understanding that the journey of discovery as important as the discovery itself,
-made the project more enjoyable. Having the freedom to explore areas and expand
-the horizons of what we know, is what keeps this project exhilarating.
-Ultimately, this mindset helped the project stay engaging and allowed for continuous learning throughout.
-
+% Over the last couple of months I made a lot of mistakes whilst working with the project.
+% Was just not focusing enough or spending enough time to do the necessary research needed
+% to comprehend the topic. Moreover, I spent time focusing on the wrong aspects of my assignment.
+% An example of that is referred to the sections were we showed variants of our pure circuit
+% that have a combinatorial interpretation. Another core issue I faced was the lack
+% of experience when dealing with more theoretical based project. This led me to
+% trying to tackle the problem head on without exploring alternative avenues. For example 
+% we can observe that our main reduction from the \textit{EndOfLine} came
+% when using topological problems instead. 
+%
+% \subsection{Lessons Learned}
+%
+% Up to the current phase of our project, we were able to gather several important takeaways.
+% Exploring the literature and trying to work the problem under different perspectives
+% may lead to potential breakthroughs. The main catalyst to our core finding, came
+% when looking into problems such as \textsc{EOPL} or more specifically
+% the \textsc{OPDC} problem, described by Fernley et al. \cite{fearnley_UniqueEndPotential_2020}.
+% \textsc{OPDC} can be described as a simpler version of the traditonal n-dimensional Brouwer problem
+% where instead, we have a unqiue fixed point and our function will point towards the unique solution.
+% Moreover, deeper look into Kleene-logic or more specifically \textit{Hazard-free} circuits allowed
+% us to exploit the $\bot$ value to compute multiple input simultaneously \cite{ikenmeyer_ComplexityHazardfreeCircuits_2019}.
+% Using the two aforementioned observations as well as looking at the original reduction again allowed us to achieve
+% the desired breakthrough.
+%
+% In order to accomplish the above research, we have also learned how to research more effectively.
+% Exploitation of LLMs such as \texttt{ChatGPT}, \texttt{Perplexity} and more, we are able to
+% approach the problem from multiple perspectives. Moreover, thought organisation and cataloguing with
+% \texttt{Obsidian}
+% also came crucial when handling a large volume of ideas and information over a long period of time,
+% as explained in the previous sections. Last but not least, utilisation of books,
+% related research and textbooks also came important when it came to theory crafting and idea extraction.
+%
+% Last but not least, the general approach to the project changed over the course of time.
+% Understanding that the journey of discovery as important as the discovery itself,
+% made the project more enjoyable. Having the freedom to explore areas and expand
+% the horizons of what we know, is what keeps this project exhilarating.
+% Ultimately, this mindset helped the project stay engaging and allowed for continuous learning throughout.
+%
 
 
 
