--- a/dissertation.bib
+++ b/dissertation.bib
@@ -501,6 +501,24 @@
   file = {/Users/christosdemetriou/Zotero/storage/JK9QL6U4/Ikenmeyer et al. - 2024 - Positivity of the Symmetric Group Characters Is as Hard as the Polynomial Time Hierarchy.pdf;/Users/christosdemetriou/Zotero/storage/84633SR3/rnad273.html}
 }
 
+@article{ikenmeyer_VanishingKroneckerCoefficients_2017,
+  title = {On Vanishing of {{Kronecker}} Coefficients},
+  author = {Ikenmeyer, Christian and Mulmuley, Ketan D. and Walter, Michael},
+  year = {2017},
+  month = dec,
+  journal = {computational complexity},
+  volume = {26},
+  number = {4},
+  pages = {949--992},
+  issn = {1420-8954},
+  doi = {10.1007/s00037-017-0158-y},
+  urldate = {2025-07-08},
+  abstract = {We show that the problem of deciding positivity of Kronecker coefficients is NP-hard. Previously, this problem was conjectured to be in P, just as for the Littlewood--Richardson coefficients. Our result establishes in a formal way that Kronecker coefficients are more difficult than Littlewood--Richardson coefficients, unless P = NP.},
+  langid = {english},
+  keywords = {05E10,68Q17,Algorithm Analysis and Problem Complexity,Algorithmic Complexity,Computational Complexity,Computational Number Theory,Geometric complexity theory,K-Theory,Kronecker coefficients,Mathematics of Algorithmic Complexity,Moment polytope,NP-hard},
+  file = {/Users/christosdemetriou/Zotero/storage/8E2CS2DF/Ikenmeyer et al. - 2017 - On vanishing of Kronecker coefficients.pdf}
+}
+
 @inproceedings{ikenmeyer_WhatWhatNot_2022,
   title = {What Is in \#{{P}} and What Is Not?},
   booktitle = {2022 {{IEEE}} 63rd {{Annual Symposium}} on {{Foundations}} of {{Computer Science}} ({{FOCS}})},
@@ -574,6 +592,23 @@
   publisher = {Springer London},
   isbn = {978-1-84628-297-3},
   lccn = {2005937504}
+}
+
+@article{makar_AnalysisKroneckerProduct_1949,
+  title = {On the {{Analysis}} of the {{Kronecker Product}} of {{Irreducible Representations}} of the {{Symmetric Group}}},
+  author = {Makar, Ragy H.},
+  year = {1949},
+  month = dec,
+  journal = {Proceedings of the Edinburgh Mathematical Society},
+  volume = {8},
+  number = {3},
+  pages = {133--137},
+  issn = {1464-3839, 0013-0915},
+  doi = {10.1017/S0013091500002686},
+  urldate = {2025-07-08},
+  abstract = {The Kronecker product of two irreducible matrix representations D({$\lambda$}), D({$\mu$}) of the symmetric group on n letters, furnishes a representation of that group, which is, in general reducible. The question of what irreducible representations will appear in the analysis of such products has been dealt with by Prof. F. D. Murnaghan. Indeed he has obtained the analysis of D(n - p, {$\lambda$}2, {\dots}) {\texttimes} D(n - q, {$\mu$}2, {\dots}), for the particular values, p = 1, q = 1, 2, 3, 4, 5; p = 2, q = 2, 3, 4; p = 3, q = 3, 4, applying a method which is a recurrence one, in the sense that to obtain such an analysis we have to look at some other analyses which come first in order.},
+  langid = {english},
+  file = {/Users/christosdemetriou/Zotero/storage/GC8QJ2GB/Makar - 1949 - On the Analysis of the Kronecker Product of Irreducible Representations of the Symmetric Group.pdf}
 }
 
 @article{marino_GeneralTheoryMetastable_1981,
