--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -34,14 +34,17 @@ as well as the limits of $\textsc{\#PPAD} -1$.
 
 \subsection{Project objectives}
 
-Below we will present our table of objectives. We will denote updated objectives with
-(*), new objectives with (!), completed objectives with (\checkmark).
+Our project requires the extending the theory of $\textsc{\#PureCircuit}$
+as well as developing a software to visualise its instances.
 
 \begin{enumerate}[label*=R.\arabic*)]
     \item Find a parsimonious reduction from the $\textit{EndOfLine}$ to $\textit{PureCircuit}$.
-    \item Improve the combinatorial bound between the reduction from EndOfLine to PureCircuit
-    \item Demonstrate that $\textbf{\#}\text{PPAD}(PureCircuit)- 1 \not\subseteq \textbf{\#P}$
-    \item Prove or disprove the following
+    \item Demonstrate that $\textsc{\#PureCircuit}- 1 \not\subseteq \textbf{\#P}$ either by:
+        \begin{enumerate}
+            \item Showing that $\textsc{\#SourceOrExcess}(k, 1) \subseteq \textsc{\#PureCircuit}$ for some $k \in \mathbb{N}_{\geq 2}$
+            \item Showing that $\textsc{\#SourceOrExcess}(k, 1) \subseteq \textsc{\#nD-StongSperner}$ for some $k,n \in \mathbb{N}_{\geq 2}$ 
+        \end{enumerate}
+    \item Prove or disprove the following:
 \[
 \forall n \in \mathbb{N}_{\geq 2} \exists c \in \mathbb{N}:  \scn{\#SourceOrExcess}(n, 1) \subseteq^c \scn{\#PureCircuit}
 \]
